WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215071
Table data is incorrectly translated in some articles on en.wikipedia.org
https://bugs.webkit.org/show_bug.cgi?id=215071
Summary
Table data is incorrectly translated in some articles on en.wikipedia.org
Wenson Hsieh
Reported
2020-08-01 21:31:48 PDT
<
rdar://problem/66354013
>
Attachments
Patch
(4.32 KB, patch)
2020-08-01 21:46 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-08-01 21:46:36 PDT
Created
attachment 405807
[details]
Patch
Wenson Hsieh
Comment 2
2020-08-02 13:47:12 PDT
Comment on
attachment 405807
[details]
Patch Thanks for the review!
EWS
Comment 3
2020-08-02 13:49:32 PDT
Committed
r265188
: <
https://trac.webkit.org/changeset/265188
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405807
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug